# retro-engine

./: .gitignore  CMakeLists.txt  README.md
assets/: cat.mtl  test.blend  test.dae  test.fbx  test.glb
assets/editor/: EditorLayout.rml  EditorTheme.rcss
assets/scene/: test.json
assets/scene/models/: Cube.glb  Plane.glb  concrete_cat_statue.glb  pillar_mesh.glb
cmake/: EmbedShaders.cmake  bin2h.cmake
scripts/: font.h  font_gen.html  image_pack.py  re_scene_format_exporter.py  retro_engine_scene_io.py
src/app/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/core/: asset_manager.cpp  asset_manager.h  core_engine.cpp  core_engine.h  input_system.cpp  input_system.h  messaging.cpp  messaging.h  window.cpp  window.h
src/engine/logic/: component.h  entity.cpp  entity.h  scene.cpp  scene.h
src/engine/logic/components/: camera.cpp  camera.h  light_source.cpp  light_source.h  model.cpp  model.h  transform.cpp  transform.h  transform_animation.cpp  transform_animation.h
src/engine/rendering/: buffer.cpp  buffer.h  debug_draw.cpp  debug_draw.h  filters.cpp  filters.h  font_data.h  framebuffer.cpp  framebuffer.h  light.cpp  light.h  material.h  material_shader.cpp  material_shader.h  mesh.cpp  mesh.h  opengl.hpp  pass.cpp  pass.h  pipeline.cpp  pipeline.h  rendering_engine.cpp  rendering_engine.h  shader.cpp  shader.h  texture.cpp  texture.h
src/engine/rendering/shaders/: blur.frag  combine.frag  directional_shadows.vert  dissolve.glsl  gbuffer.frag  gbuffer.vert  lighting.frag  lighting_v2.frag  phong.frag  phong.vert  point_shadows.frag  point_shadows.geom  point_shadows.vert  quad.frag  quad.vert  shadows.frag
src/engine/src/editor/: EditorApp.cpp  EditorApp.h  EditorApplication.cpp  EditorApplication.h  RmlRenderer.cpp  RmlRenderer.h  RmlSystemInterface.cpp  RmlSystemInterface.h
src/engine/utils/: custom_types.h  logger.h  physfs_wrapper.cpp  physfs_wrapper.h  pool.h  profiler.cpp  profiler.h  string_utils.cpp  string_utils.h
tools/: CMakeLists.txt  shader_header_gen.cpp
